added more methods to handle and encode base64 images